--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_playerspick">playerspick</string>
     <string name="title_activity_game_setup_confirmation">GameSetupConfirmation</string>
     <string name="title_activity_random_class">RandomClass</string>
+    <string name="title_activity_night_turn">NightTurnActivity</string>
 
 </resources>
