Adicionado página de créditos
CreditsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="title_activity_random_class">RandomClass</string>
     <string name="title_activity_night_turn">NightTurnActivity</string>
     <string name="class_action_string"><u>Matar um camponês</u></string>
-
+    <string name="title_activity_credits">CreditsActivity</string>
 
 </resources>
